resolve-doctor-test-bugs

--- a/src/Frontend/src/app/Feature/order-success/order-success/order-success.html
+++ b/src/Frontend/src/app/Feature/order-success/order-success/order-success.html
@@ -36,6 +36,9 @@
 
 <!-- Loading State -->
 <div *ngIf="loading" class="loading-container text-center py-5">
+  <div class="loader">
+    <div class="loader-spinner"></div>
+  </div>
   <p>Loading your order details...</p>
 </div>
 
